k8s/minikube/jobber-client/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-client
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: jobber-client
    spec:
      containers:
        - name: jobber-client
          image: colakkemree/jobber-client:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: client
              containerPort: 80
