k8s/minikube/jobber-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobber-client
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: jobber-client
  ports:
    - name: client
      port: 80
      targetPort: client
      protocol: TCP
